syntax = "proto3";

package ibc;

option go_package = "github.com/pokt-network/pocket/shared/core/types";

message CommitmentRoot {
    bytes root = 1;
}

message CommitmentProof {
    bytes key = 1;
    bytes value = 2;
    repeated bytes side_nodes = 3;
    optional bytes non_membership_leaf_data = 4;
    optional bytes sibling_data = 5;
}
